[project]
name = "secretprobe"
version = "1.0.0"
description = "Web Misconfiguration & Secrets Scanner"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "urllib3>=2.0.0",
]

[project.scripts]
secretprobe = "secretprobe:main"
